--- a/tool/src/webapp/templates/instructions/sequencing.html
+++ b/tool/src/webapp/templates/instructions/sequencing.html
@@ -22,7 +22,7 @@ background-color: #ffffdd;
 </style>
 
 <blockquote>
-<p>[<a href="general.html"> Back to main help screen</a>]</p>
+<p>[<a href="new-general.html"> Back to main help screen</a>]</p>
 <h2>SEQUENCING IN LESSONS</h2>
 <table role="presentation">
     <tbody>
